# linkora

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  IMPLEMENTATION_NOTES.md  LICENSE  MULTI_USER_ARCHITECTURE.md  README.md  USER_MANAGEMENT_IMPLEMENTATION.md  flutter-dev-workspace.code-workspace  linkora-dev-workspace.code-workspace  linkora_specifications.md  linkora_usecases.md
ai-assistant/: .coverage  .dockerignore  .env.template  .gitignore  COMPARISON.md  CONVERSATION_STAGES.md  Containerfile  DATA_FLOW_GRAPH.md  DEBUG_RECORDING.md  Dockerfile  FILE_INDEX.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  audio_processor.py  audio_track.py  coverage.xml  docker-compose.yml  main.py  peer_connection_handler.py  pyproject.toml  pytest.ini  quickstart.sh  requirements.txt  run.sh  signaling_server.py  test_client.py  validate.py
ai-assistant/configs/: nginx.conf  ssl-cert-san.conf  supervisor.conf
ai-assistant/docs/: HUB_AND_SPOKE_ARCHITECTURE.md  HUB_SPOKE_TEST_FIXES.md
ai-assistant/scripts/: benchmark_voice_pipeline.py  cloud-deploy.sh  create-ssl-cert.sh  delete_profile.py  delete_user.py  delete_weaviate_user.py  download_models.py  generate_admin_token.py  init_database.py  init_hub_spoke_schema.py  init_weaviate.py  inspect_weaviate.py  repair_weaviate_user.py  run.sh  test_admin_interface.py  test_search_providers.py
ai-assistant/tests/: README.md  __init__.py  conftest.py  run_hub_spoke_tests.py  test_admin_service.py  test_agent_profile.py  test_agent_runtime_fsm.py  test_agent_tools.py  test_ai_assistant.py  (+44 more)
(+274 files in other folders)
